fix main bg, add logo bg and fix some spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,12 @@ body {
     font-family: "Raleway";
 
     background-image: url(../images/woman-code.png);
-    background-position: 0;
+    background-attachment: fixed;
     background-size: 100%;
     background-color: transparent;
     background-repeat: no-repeat;
+    background-blend-mode: screen;
+    background-color: rgba(0, 0, 0, 1);
 }
 
 /* setting fonts and weights */
@@ -19,7 +21,7 @@ h1 {
 
     font-weight: 900;
     text-transform: uppercase;
-    font-size: 42px;
+    font-size: 40px;
     
     background: -webkit-linear-gradient(rgba(51, 168, 219, 1), rgba(20, 114, 183, 1));
     -webkit-background-clip: text;
@@ -31,8 +33,8 @@ h2 {
 
     font-weight: 700;
     text-transform: uppercase;
-    font-size: 30px;
-    letter-spacing: 5px;
+    font-size: 32px;
+    letter-spacing: 4px;
     color: rgba(51, 168, 219, 1);
 }
 
@@ -43,12 +45,11 @@ p {
 
 /* button styling */
 button {
-    position: relative;
-    padding: 19px 42px;
-    width: 326px;
+    font-size: 0px;
 
-    font-weight: 900;
-    text-transform: uppercase;
+    position: relative;
+    padding: 16px 34px;
+    /* width: 326px; */
 
     border: none;
     outline: none;
@@ -73,7 +74,8 @@ button::before {
 button::after {
     content: "QUERO ME INSCREVER";
     font-size: 16px;
-    letter-spacing: 2px;
+    font-weight: 900;
+    letter-spacing: 2.5px;
     background: linear-gradient(rgba(51, 168, 219, 1), rgba(20, 114, 183, 1));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -86,8 +88,8 @@ button::after {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    background: linear-gradient(rgb(0, 0, 0), rgba(49, 168, 221, 0.2), rgb(0, 0, 0));
+    
+    background: linear-gradient(rgba(0, 0, 0, 0.3) 0%, rgba(49, 168, 221, 0.2) 45% 50%, rgba(0, 0, 0, 0.3)100%);
 }
 
 .banner-content p {
@@ -102,8 +104,19 @@ button::after {
     background-size: 100% 732px;
     background-color: rgb(0, 0, 0);
 
-    padding: 72px 0px;
+    padding: 64px 0px 72px 0px;
     border-bottom: 1px solid rgba(51, 168, 219, 1);
+}
+
+.logo {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
+    padding: 26px 16px;
+    margin-bottom: 24px;
+}
+
+.logo img {
+    height:196px;
 }
 
 /* setting background dif between sections and bckg img */
@@ -128,6 +141,8 @@ button::after {
     display: flex;
     flex-direction: column;
     gap: 24px;
+
+    margin-top:8px;
 }
 
 .module {
@@ -151,14 +166,12 @@ button::after {
 
 /* transform-world section */
 #transform-world {
-    padding: 64px 0px;
+    padding: 78px 0px;
     height: 400px;
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items:flex-start;
     justify-content: center;
-
-    background-color: rgba(0, 0, 0, 0.8);
 
     border-bottom: 0.6px solid rgba(51, 168, 219, 1);
 }
@@ -169,8 +182,11 @@ button::after {
     width: 254px;
     text-transform: lowercase;
     margin-left: 200px;
-    text-shadow: 3px  0px 0px rgba(51, 168, 219, 1);
+    color: #fff;
+    text-shadow: 3px  3px 0px rgba(51, 168, 219, 1);
+    /* mix-blend-mode: normal; */
 }
+
 
 /* professional-challenges section */
 #professional-challenges {
@@ -195,11 +211,32 @@ button::after {
     text-align: center;
 }
 
-footer {
-    padding: 64px 0px;
+#professional-challenges img {
+    margin-top: 52px;
+    margin-bottom: 18px;
+}
 
-    background-color: #000;
+
+/* footer settings */
+footer {
+    padding: 58px 0px 58px 0px;
+
+    background: linear-gradient(rgba(0, 0, 0, 1), rgb(9, 34, 43));
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+footer p {
+    margin: 4px
+}
+
+footer img {
+    height: 42.5px;
+}
+
+footer a {
+    text-decoration: none;
+    font-weight: 700;
+    color:rgba(51, 168, 219, 1)
 }
